--- a/src/style/sass/unique/_0_reset.sass
+++ b/src/style/sass/unique/_0_reset.sass
@@ -45,6 +45,9 @@ body
 	font-family: inconsolata-regular
 	color: $hotRed
 
+main
+	overflow: hidden
+
 .container
 	width: 100%
 	padding: 0 1rem
