--- a/src/style/sass/unique/_1_index.sass
+++ b/src/style/sass/unique/_1_index.sass
@@ -779,6 +779,9 @@
                     width: 100%
                     margin-bottom: 50px
 
+                    @media screen and (max-width: 575px)
+                        padding: 0
+
                 img
                     width: 100%
                     height: auto
